# carbot

./: .gitignore  CMakeLists.txt
scripts/: carbot_bashrc.sh  run.sh
src/car_msgs/: CMakeLists.txt  package.xml
src/sim/: CMakeLists.txt  package.xml
src/sim/worlds/: diff_drive.world
